--- a/teamprojectvue/.env
+++ b/teamprojectvue/.env
@@ -1,5 +1,6 @@
 # MA 소스 URL
-VITE_API_URL=http://greencomart.kro.kr:716
+VITE_API_URL=http://192.168.0.103:8100
+# VITE_API_URL=http://greencomart.kro.kr:716
 VITE_API_ANNOUNCE_URL=http://localhost:8110
 VITE_API_QNA_URL=http://localhost:8120
 
